--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 MONGODB_URL=mongodb+srv://tinywheelsadmin:unBZjGJr0cEPVCns@cluster0.kb9p873.mongodb.net/production?retryWrites=true&w=majority
+
+JWT_SECRET=tinywheels
+JWT_EXPIRES=3d
