image upload success to cloudinary

--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ MONGODB_URL=mongodb+srv://tinywheelsadmin:unBZjGJr0cEPVCns@cluster0.kb9p873.mong
 
 JWT_SECRET=tinywheels
 JWT_EXPIRES=3d
+
+CLOUDINARY_CLOUD_NAME=tinywheels
+CLOUDINARY_API_KEY=794294378316563
+CLOUDINARY_API_SECRET=UFa53Ffag2bNqveRI-WUzAK2BxY
