--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "imagekit": "^4.1.3",
     "mongoose": "^7.4.1",
+    "nestjs-cloudinary": "^2.0.6",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -44,6 +44,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.12",
